<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.edu.scu.creator.networkclient.ServiceActivity"
    tools:layout_editor_absoluteY="16dp"
    tools:layout_editor_absoluteX="16dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="294dp"
        android:layout_height="272dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="-1dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        app:layout_constraintHorizontal_bias="0.0">

        <EditText
            android:id="@+id/etOperatorUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:ems="10"
            android:hint="@string/account"
            android:inputType="textVisiblePassword"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/etOperatorPwd"
            app:layout_constraintRight_toRightOf="@+id/btChooseService"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="1dp" />

        <EditText
            android:id="@+id/etOperatorPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/btConfirm"
            app:layout_constraintRight_toRightOf="@+id/etOperatorUserId"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="18dp"
            app:layout_constraintLeft_toLeftOf="@+id/etOperatorUserId"
            app:layout_constraintHorizontal_bias="0.0" />

        <Button
            android:id="@+id/btConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            android:layout_marginStart="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="64dp"
            app:layout_constraintRight_toRightOf="@+id/etOperatorPwd"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/btChooseService"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="25dp" />

        <Button
            android:id="@+id/btChooseService"
            android:layout_width="216dp"
            android:layout_height="51dp"
            android:text="@string/internet"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginEnd="38dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginRight="40dp" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
