<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menuDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="cn.edu.scu.creator.networkclient.MainActivity"
        android:background="@drawable/background"
        android:id="@+id/main_layout">

        <Button
            android:id="@+id/btLogin"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/login"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/etUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textVisiblePassword"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:hint="@string/userId"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="199dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.502" />

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_constraintTop_creator="1"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/etUserId"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/etUserId"
            android:layout_marginLeft="-13dp" />

        <CheckBox
            android:id="@+id/cbSavePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savePassword"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/btLogin"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="@+id/etPassword" />

        <Button
            android:id="@+id/btSettings"
            android:layout_width="47dp"
            android:layout_height="49dp"
            android:background="@drawable/menu"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="1dp"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>
    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <ListView
        android:id="@+id/menuListView"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:choiceMode="singleChoice"
        android:divider="@color/colorPrimary"
        android:dividerHeight="1dp"
        android:background="@color/textColorPrimary"/>
</android.support.v4.widget.DrawerLayout>